# Dasan

./: .env.example  .gitignore  AGENT_MVP.md  README.md  install.ps1  install.sh  notes.txt  pyproject.toml  requirements.txt
agent/: __init__.py  alignment.py  api.py  citations.py  config.py  discord_bot.py  main.py  onboarding.py  plugins.py  prompt.py  service.py  tui.py  ui_labels.py  workspace.py
agent/auth/: flow.py  store.py
agent/core/: loop.py
agent/providers/: anthropic_adapter.py  openai_oauth_adapter.py
agent/session/: compact.py  store.py
agent/tools/: delete_file.py  edit_file.py  list_dir.py  move_file.py  read_file.py  registry.py  remember.py  run_command.py  search.py  write_file.py
dasan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_citations.py  test_compact.py  test_store.py
